--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ permalink: pretty
 markdown: kramdown
 kramdown:
   input: GFM
-theme: minima
+theme: jekyll-theme-cayman
 gems:
   - jekyll-feed
 
